--- a/gradle.properties
+++ b/gradle.properties
@@ -13,6 +13,6 @@ org.gradle.parallel=true
 	archives_base_name = verdance
 
 # Dependencies
-	fabric_version=0.79.0+1.19.4
-	scribe_version=0.1.0+1.19.4
+	fabric_version=0.80.0+1.19.4
+	scribe_version=0.1.0
 	parchment_version=1.19.3:2023.03.12
