Shrublands now generate!

--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,4 @@ org.gradle.parallel=true
 	fabric_version=0.80.0+1.19.4
 	scribe_version=0.2.0
 	parchment_version=1.19.3:2023.03.12
+	terrablender_version=2.2.0.156
