--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,8 @@ org.gradle.parallel=true
 
 # Fabric Properties
 	mod_id=verdance
-	minecraft_version=1.19.4
-	yarn_mappings=1.19.4+build.2
-	loader_version=0.14.19
+	minecraft_version=1.20
+	loader_version=0.14.21
 
 # Mod Properties
 	mod_version = 1.0.0
@@ -13,7 +12,7 @@ org.gradle.parallel=true
 	archives_base_name = verdance
 
 # Dependencies
-	fabric_version=0.80.0+1.19.4
-	scribe_version=0.2.2
+	fabric_version=0.83.0+1.20
+	scribe_version=1.20-0.4.1
 	parchment_version=1.19.3:2023.03.12
 	terrablender_version=2.2.0.156
