--- a/build.gradle
+++ b/build.gradle
@@ -12,15 +12,11 @@ repositories {
 		url = 'https://maven.parchmentmc.org'
 	}
 	maven {
-		url = uri("https://maven.pkg.github.com/team-abode/scribe-wip")
-		credentials {
-			username = System.getenv("GITHUB_USER")
-			password = System.getenv("GITHUB_TOKEN")
-		}
-	}
-	maven {
 		name = "Forge Maven"
 		url = 'https://maven.minecraftforge.net/'
+	}
+	maven {
+		url = 'https://jitpack.io'
 	}
 }
 
@@ -36,9 +32,10 @@ dependencies {
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
 	// Scribe
-	modApi "com.teamabode:scribe:${rootProject.scribe_version}"
-	include "com.teamabode:scribe:${rootProject.scribe_version}"
+	modApi "com.github.Team-Abode:scribe:${rootProject.scribe_version}"
+	include "com.github.Team-Abode:scribe:${rootProject.scribe_version}"
 
+	// Terrablender
 	modApi "com.github.glitchfiend:TerraBlender-fabric:1.20-${rootProject.terrablender_version}"
 }
 
