--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,4 @@ org.gradle.parallel=true
 	scribe_version=1.20.1-0.5.0-alpha
 	parchment_version=1.20.1:2023.07.23
 	terrablender_version=3.0.0.163
+	farmersdelight_version=4640640
