--- a/build.gradle
+++ b/build.gradle
@@ -45,7 +45,7 @@ dependencies {
 	modApi "com.github.glitchfiend:TerraBlender-fabric:1.20-${rootProject.terrablender_version}"
 
 	// Farmer's Delight
-	modImplementation "curse.maven:farmersdelight-482834:${project.farmersdelight_version}"
+	modCompileOnly "curse.maven:farmersdelight-482834:${project.farmersdelight_version}"
 }
 
 base {
