--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,17 @@ repositories {
 			includeGroup "curse.maven"
 		}
 	}
+	exclusiveContent {
+		forRepository {
+			maven {
+				name = "Modrinth"
+				url = "https://api.modrinth.com/maven"
+			}
+		}
+		filter {
+			includeGroup "maven.modrinth"
+		}
+	}
 }
 
 dependencies {
@@ -45,7 +56,7 @@ dependencies {
 	modApi "com.github.glitchfiend:TerraBlender-fabric:1.20-${rootProject.terrablender_version}"
 
 	// Farmer's Delight
-	modCompileOnly "curse.maven:farmersdelight-482834:${project.farmersdelight_version}"
+	modCompileOnly "maven.modrinth:farmers-delight-fabric:${project.farmersdelight_version}"
 }
 
 base {
