--- a/gradle.properties
+++ b/gradle.properties
@@ -16,4 +16,6 @@ org.gradle.parallel=true
 	scribe_version=1.20.1-0.5.0-alpha
 	parchment_version=1.20.1:2023.07.23
 	terrablender_version=3.0.0.163
-	farmersdelight_version=4640640
+	modmenu_version=7.2.1
+	rei_version=12.0.634+fabric
+	farmersdelight_version=1.4.1
