--- a/gradle.properties
+++ b/gradle.properties
@@ -16,6 +16,8 @@ org.gradle.parallel=true
 	scribe_version=1.20.1-0.5.0-alpha
 	parchment_version=1.20.1:2023.07.23
 	terrablender_version=3.0.0.163
-	modmenu_version=7.2.1
-	rei_version=12.0.634+fabric
-	farmersdelight_version=1.4.1
+	farmersdelight_version=1.4.2
+	everycompat_version=mdv7FQAL
+	moonlight_version=mHeZr8dp
+
+
