--- a/gradle.properties
+++ b/gradle.properties
@@ -16,8 +16,10 @@ org.gradle.parallel=true
 	scribe_version=1.20.1-0.5.0-alpha
 	parchment_version=1.20.1:2023.07.23
 	terrablender_version=3.0.0.163
+
 	farmersdelight_version=1.4.2
 	everycompat_version=mdv7FQAL
 	moonlight_version=mHeZr8dp
+	twigs_version=3.1.0
 
 
