Various technical changes
* Updated TerraBlender version
* Changed BlockSetType and WoodType to use builders, since old methods are now deprecated.
* Silk Moth and Silkworm are now of category CREATURE rather than MONSTER.

--- a/build.gradle
+++ b/build.gradle
@@ -53,7 +53,7 @@ dependencies {
 	include "com.github.Team-Abode:scribe:${rootProject.scribe_version}"
 
 	// Terrablender
-	modApi "com.github.glitchfiend:TerraBlender-fabric:1.20-${rootProject.terrablender_version}"
+	modApi "com.github.glitchfiend:TerraBlender-fabric:1.20.1-${rootProject.terrablender_version}"
 
 	// Farmer's Delight
 	modRuntimeOnly "maven.modrinth:farmers-delight-fabric:${project.farmersdelight_version}"
@@ -63,6 +63,8 @@ dependencies {
 	modRuntimeOnly "maven.modrinth:moonlight:${rootProject.moonlight_version}"
 	// Twigs
 	modRuntimeOnly "maven.modrinth:twigs:${rootProject.twigs_version}"
+
+	modCompileOnly "maven.modrinth:species:eh9J38KG"
 }
 
 base {
