--- a/build.gradle
+++ b/build.gradle
@@ -56,7 +56,7 @@ dependencies {
 	modApi "com.github.glitchfiend:TerraBlender-fabric:1.20.1-${rootProject.terrablender_version}"
 
 	// Farmer's Delight
-	modRuntimeOnly "maven.modrinth:farmers-delight-fabric:${project.farmersdelight_version}"
+	modImplementation "maven.modrinth:farmers-delight-fabric:${project.farmersdelight_version}"
 	// Every Compat
 	modRuntimeOnly "maven.modrinth:every-compat:${rootProject.everycompat_version}"
 	// Moonlight
