--- a/gradle.properties
+++ b/gradle.properties
@@ -13,8 +13,7 @@ org.gradle.parallel=true
 
 # Dependencies
 	fabric_version=0.100.3+1.21
-	scribe_version=1.21-1.2.0
-	terrablender_version=4.0.0.1
+	sketch_version=1.21-1.2.0
 
 # Compatibility Dependencies
 	farmersdelight_version=1.4.2
