--- a/gradle.properties
+++ b/gradle.properties
@@ -12,8 +12,9 @@ org.gradle.parallel=true
 	archives_base_name = verdance
 
 # Dependencies
-	fabric_version=0.100.3+1.21
+	fabric_version=0.100.6+1.21
 	sketch_version=1.21-1.2.0
+	biolith_version=3.0.0-beta.1
 
 # Compatibility Dependencies
 	farmersdelight_version=1.4.2
